tests/characterization/snapshots/command_help__backend_build.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend build sse-runtime
--- stderr ---
--- end ---
