tests/characterization/snapshots/command_help__backend_stop.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend stop <core|sse_engine|mitigator|estimator|combiner|tranqu|gateway|all>
--- stderr ---
--- end ---
