tests/characterization/snapshots/command_help__backend_uninstall.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend uninstall <engine|tranqu|gateway> <version>
  oqtopus backend uninstall <engine|tranqu|gateway> branch:<branch>
--- stderr ---
--- end ---
