tests/characterization/snapshots/command_help__backend_update.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend update <engine|tranqu|gateway>
--- stderr ---
--- end ---
