tests/characterization/snapshots/command_help__backend_versions.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend versions <engine|tranqu|gateway>
--- stderr ---
--- end ---
